# aiipython

./: .gitignore  README.md  data.csv  jupyterhub_config.py  mrmd.md  my_history.py  pyproject.toml  test_edit_tool.txt
.virtual_documents/: Untitled.ipynb
docs/: pi-lm-gateway.md  pi-native.md  pi-tui-migration.md
src/aiipython/: __init__.py  __main__.py  adapter.py  agent.py  app.py  app.tcss  auth.py  checkpoint.py  cli.py  context.py  kernel.py  lm_factory.py  magics.py  mlflow_integration.py  model_catalog.py  parser.py  pi_gateway_client.py  pi_gateway_lm.py  pi_native.py  pi_native_client.py  pi_native_lm.py  pi_tui_bridge.py  prompt_policy.py  session.py  settings.py  streaming_lm.py  subprocess_agent.py  tabminion.py  traffic_server.py  wire.py  wire_bridge.py
src/aiipython/pi_gateway/: package-lock.json  package.json  pi_gateway_server.mjs
src/aiipython/pi_native_host/: package-lock.json  package.json  pi_native_host.mjs
src/aiipython/pi_tui_frontend/: package-lock.json  package.json  pi_tui_app.mjs
