[project]
name = "aiipython"
version = "0.2.3"
description = "A reactive AI chat assistant running inside IPython"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=3.0",
    "dspy>=2.6",
    "ipython>=8.0",
    "Pillow>=10.0",
    "rich>=13.0",
    "dspy-template-adapter>=0.2.1",
    "dill>=0.3.9",
    "httpx>=0.27",
]

[project.scripts]
aiipython = "aiipython.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiipython"]
